opam-version: "2.0"
name:         "bin"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://git.robur.coop/robur/bstr"
bug-reports:  "https://git.robur.coop/robur/bstr"
dev-repo:     "git+https://github.com/robur-coop/bstr"
doc:          "https://robur-coop.github.io/bstr/"
license:      "MIT"
synopsis:     "A DSL to describe binary formats"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.14.0"}
  "dune"        {>= "3.5.0"}
  "slice"       {= version}
]
x-maintenance-intent: [ "(latest)" ]
