(executable
 (name sub)
 (libraries slice.bstr bstr cstruct bechamel bechamel-js))

(rule
 (targets sub.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./sub.exe))))

(rule
 (targets sub.html)
 (action
  (system "%{bin:bechamel-html} < %{dep:sub.json} > %{targets}")))

(executable
 (name blit)
 (libraries bstr cstruct bechamel bechamel-js))

(rule
 (targets blit.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./blit.exe))))

(rule
 (targets blit.html)
 (action
  (system "%{bin:bechamel-html} < %{dep:blit.json} > %{targets}")))

(executable
 (name equal)
 (libraries base64 slice.bstr bstr cstruct bechamel bechamel-js))

(rule
 (targets equal.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./equal.exe))))

(rule
 (targets equal.html)
 (action
  (system "%{bin:bechamel-html} < %{dep:equal.json} > %{targets}")))
